# scirust

./: .gitignore  ANALYSIS_REPORT.md  ARCHITECTURE-B.md  AUDIT_ALGORITHMES_2026-07-11.md  AUDIT_COMPLET.md  AUDIT_REPDL_2026-07-10.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN_SCIRUST_TENSOR.md  Documentation.md  Documentation_AR.md  Documentation_DE.md  Documentation_EN.md  Documentation_ES.md  Documentation_JA.md  Documentation_KO.md  Documentation_ZH.md  INTEGRATION_GUIDE.md  LICENSE  LICENSE.md  LICENSING.fr.md  LICENSING.md  LIVESTATE.md  RADAR_OPTRONICS_III_2026-07-11.md  RADAR_OPTRONICS_II_2026-07-11.md  RADAR_OPTRONICS_IV_2026-07-11.md  RADAR_OPTRONICS_IX_2026-07-11.md  RADAR_OPTRONICS_VIII_2026-07-11.md  RADAR_OPTRONICS_VII_2026-07-11.md  RADAR_OPTRONICS_VI_2026-07-11.md  RADAR_OPTRONICS_V_2026-07-11.md  RADAR_OPTRONICS_XL-XLIX_2026-07-15.md  RADAR_OPTRONICS_XVI_2026-07-11.md  RADAR_OPTRONICS_XV_2026-07-11.md  RADAR_OPTRONICS_XXIII_2026-07-12.md  RADAR_OPTRONICS_XXII_2026-07-12.md  RADAR_OPTRONICS_XXIV_2026-07-12.md  RADAR_OPTRONICS_XXIX_2026-07-12.md  RADAR_OPTRONICS_XXI_2026-07-12.md  (+38 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: import_onnx_json_from_bytes.rs  qsr1_from_bytes.rs  safetensors_from_bytes.rs  safetensors_nd_from_bytes.rs  tape_backward_from_bytes.rs  tensor_nd_ops_from_bytes.rs
scirust-algogen/: Cargo.toml
scirust-algogen/src/: lib.rs
scirust-arena/: Cargo.toml
scirust-arena/benches/: arena_bench.rs
scirust-arena/src/: aligned.rs  allocator.rs  lib.rs  slab.rs  tests.rs
scirust-audio/: Cargo.toml
scirust-audio/src/: lib.rs
scirust-autodiff/: Cargo.toml
scirust-autodiff/src/: lib.rs
scirust-bench-schema/: Cargo.toml
scirust-bench-schema/src/: lib.rs
scirust-burn-bridge/: Cargo.toml
scirust-burn-bridge/benches/: forward.rs
scirust-burn-bridge/examples/: eval_population.rs
scirust-burn-bridge/src/: lib.rs
scirust-burn-bridge/tests/: integration.rs
scirust-causal/: Cargo.toml
scirust-causal/examples/: conditional_independence_benchmark.rs  pc_stable_benchmark.rs  typed_causal_contract.rs
scirust-causal/src/: acyclicity.rs  assumptions.rs  certificate.rs  conditional_independence.rs  cpdag.rs  cubic_score.rs  dataset.rs  environment.rs  equivalence_class.rs  error.rs  fingerprint.rs  graph.rs  graph_constraints.rs  intervention.rs  lib.rs  objective.rs  optimize.rs  orientation.rs  partial_correlation.rs  permutation.rs  permutation_calibration.rs  robust_partial_correlation.rs  skeleton_discovery.rs  synthetic.rs  triangular_cubic.rs  variable.rs
scirust-causal/tests/: acyclicity.rs  assumptions.rs  certificate.rs  conditional_independence.rs  conditional_independence_adversarial.rs  cubic_score.rs  dataset.rs  end_to_end.rs  environment.rs  graph.rs  graph_constraints.rs  intervention.rs  objective.rs  optimize.rs  pc_stable.rs  pc_stable_adversarial.rs  permutation.rs  synthetic.rs  triangular_cubic.rs  variable.rs
scirust-cayley-filter/: Cargo.toml  README.md
scirust-cayley-filter/docs/: ARCHITECTURE.md
scirust-cayley-filter/examples/: global_train_dev_test_benchmark.rs  kernel_contamination.rs  kernel_sample_efficiency.rs  known_kernel_protocol.rs  matched_kernel4.rs  matched_projector_oracle.rs  multi_family_local_benchmark.rs  multi_family_subspace_benchmark.rs  nullity_inventory.rs  optimize_multiplier_holdout.rs  optimize_multiplier_protocol.rs  real_bearing_diagnostic.rs  real_ecg_spectral.rs  real_ecg_temporal.rs  real_voicebank_spectral.rs  real_voicebank_temporal.rs  srcc_cayley_clifford_learned.rs  srcc_cayley_clifford_matched.rs  srcc_cayley_clifford_resonant.rs  srcc_robust_stable_search.rs  srcc_robust_transport_contamination.rs  srcc_sample_efficiency.rs  srcc_transport_contamination.rs
scirust-cayley-filter/src/: analysis.rs  autotune.rs  baseline.rs  clifford.rs  filter.rs  lib.rs  operator.rs  optimizer.rs  projector.rs  scalar.rs  search.rs  selection.rs  soft.rs  spectral.rs  subspace.rs  temporal.rs
scirust-civil/: Cargo.toml
scirust-civil/src/: beam_on_elastic_foundation.rs  bearing_capacity.rs  column_effective_length.rs  composite_beam.rs  concrete_mix_design.rs  concrete_shrinkage.rs  consolidation_degree.rs  earth_pressure.rs  fixed_end_moments.rs  hydraulic_jump.rs  influence_line.rs  lib.rs  load_combination.rs  moment_distribution.rs  open_channel_manning.rs  pile_capacity.rs  pile_group_efficiency.rs  plate_buckling.rs  prestressed_concrete.rs  rational_runoff.rs  rc_anchorage.rs  rc_beam_flexure.rs  rc_column.rs  rc_crack_width.rs  rc_creep_deflection.rs  rc_footing.rs  rc_punching.rs  rc_serviceability.rs  rc_shear.rs  rc_slab.rs  rc_torsion.rs  response_spectrum.rs  retaining_wall.rs  seepage.rs  seismic_base_shear.rs  settlement.rs  slope_stability.rs  snow_load.rs  soil_compaction.rs  steel_base_plate.rs  (+15 more)
scirust-cli/: Cargo.toml  build.rs
scirust-cli/src/: learning.rs  lib.rs  main.rs  nlp.rs  numeric.rs  quickstart.rs  reasoning.rs  sciagent.rs  studio.rs  symbolic.rs  synergy.rs  trader.rs  ux.rs
scirust-control/: Cargo.toml
scirust-control/src/: lib.rs  license.rs  lqr.rs  monitor.rs  mpc.rs  pid.rs  qp.rs
scirust-core/: Cargo.toml
scirust-core/examples/: anee_phase_c_dose_response.rs  anee_phase_c_kernel2_quaternion.rs  anee_phase_c_prototype.rs  anee_phase_c_two_hop.rs  anee_phase_d_cache.rs  anee_phase_d_certificates.rs  anee_phase_d_determinism_transfer.rs  bench_ab_welch.rs  bench_add_bias.rs  bench_attention.rs  bench_backward_allocs.rs  bench_conv_forward.rs  (+10 more)
scirust-discovery/: Cargo.toml  README.md
scirust-edge/: Cargo.toml
scirust-electrotech/: Cargo.toml
scirust-estimation/: Cargo.toml
scirust-events-examples/: Cargo.toml
scirust-evo/: Cargo.toml
scirust-finmigrate/: .gitignore  ARCHIVE.md  Cargo.toml  PRODUCTION_GATES.md  README.md  audit_report.md
scirust-fluids/: Cargo.toml
scirust-forecast/: Cargo.toml
scirust-frame/: Cargo.toml
scirust-fusion/: Cargo.toml
scirust-gp/: Cargo.toml
scirust-gpu/: Cargo.toml
scirust-graph/: Cargo.toml
scirust-grid/: Cargo.toml
scirust-hypercrypto/: Cargo.toml  README.md
(+2399 files in other folders)
