[package]
name = "scirust"
version = "0.13.0"
edition = "2021"
publish = false
rust-version = "1.85"
description = "SciRust — Industrial-grade deep learning framework in pure Rust"
license-file = "LICENSE.md"
repository = "https://github.com/CHECKUPAUTO/scirust"

[dependencies]
scirust-core = { path = "scirust-core" }
scirust-simd = { path = "scirust-simd" }
scirust-symbolic = { path = "scirust-symbolic" }
scirust-learning = { path = "scirust-learning" }
scirust-solvers = { path = "scirust-solvers" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

# The framework itself is exposed as the `scirust` library (src/lib.rs).
# The bundled autonomous-agent demo (src/main.rs, "OpenClaw-U") is a separate,
# clearly-named binary — it is NOT part of the deep-learning framework.
[[bin]]
name = "openclaw-u"
path = "src/main.rs"

[workspace]
members = [
    "examples/mnist_classifier",
    "examples/quickstart_v2",
    "examples/cifar10_classifier",
    "examples/transformer_demo",
    "examples/transformer_compress",
    "examples/sentiment_demo",
    "scirust-macros",
    "scirust-autodiff",
    "scirust-simd-macros",
    "scirust-simd",
    "scirust-gpu",
    "scirust-gpu-macros",
    "scirust-core",
    "scirust-runtime",
    "scirust-embedded",
    "scirust-learning",
    "scirust-symbolic",
    "scirust-symreg",
    "scirust-solvers",
    "scirust-reasoning",
    "scirust-bridge",
    "scirust-evo",
    "scirust-edge",
    "scirust-events-core",
    "scirust-events-models",
    "scirust-events-runtime",
    "scirust-events-examples",
    "scirust-neuro-symbolic",
    "scirust-arena",
    "scirust-fusion",
    "scirust-tn",
    "scirust-tensor-core",
    "scirust-tensor-einsum",
    "scirust-tensor-contraction",
    "scirust-tensor-compile",
    "scirust-tensor-runtime",
    "scirust-tensor-examples",
    "scirust-onnx",
    "scirust-nas",
    "scirust-som/crates/pcg",
    "scirust-som/crates/tokenizer",
    "scirust-som/crates/dataset",
    "scirust-som/crates/model",
    "scirust-som/crates/trainer",
    "scirust-som/crates/inference",
    "scirust-som/crates/symbolic",
    "scirust-som/crates/frontend",
    "scirust-som/crates/cli",
    "scirust-som/crates/visualizer",
]
exclude = [
    "scirust-rustc-driver",
    "examples/simd_views_demo",
    "examples/benchmarks",
    # Requires `[workspace.dependencies] burn` and the heavy external `burn`
    # crate; kept out of the default workspace build.
    "scirust-burn-bridge",
]
resolver = "2"
