[package]
name = "scirust"
version = "0.14.0"
edition = "2021"
publish = false
rust-version = "1.89"
description = "SciRust — pure-Rust deterministic deep-learning & scientific-computing platform with certifiable industrial verticals (estimation, navigation, water, OT security, functional safety), validated from cloud x86 to embedded ARM (Jetson)"
license-file = "LICENSE.md"
repository = "https://github.com/Memorithm/scirust"

[dependencies]
scirust-core = { path = "scirust-core" }
scirust-simd = { path = "scirust-simd" }
scirust-symbolic = { path = "scirust-symbolic" }
scirust-learning = { path = "scirust-learning" }
scirust-solvers = { path = "scirust-solvers" }
scirust-rsi = { path = "scirust-rsi" }
tokio = { version = "1", features = ["full"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
rand = { version = "0.8", optional = true }
# Used only by the bundled `openclaw-u` demo binary (src/main.rs) to
# integrity-protect its `state.json` with an HMAC-SHA256 tag. Already present
# transitively via scirust-trader, so this adds no new download to the lockfile.
sha2 = { version = "0.10", optional = true }

[features]
default = []
openclaw = ["dep:tokio", "dep:serde", "dep:serde_json", "dep:chrono", "dep:rand", "dep:sha2"]

[dev-dependencies]
rand = "0.8"

# The framework itself is exposed as the `scirust` library (src/lib.rs).
# The bundled autonomous-agent demo (src/main.rs, "OpenClaw-U") is a separate,
# clearly-named binary — it is NOT part of the deep-learning framework.
[[bin]]
name = "openclaw-u"
path = "src/main.rs"
required-features = ["openclaw"]

[workspace]
members = [
    "examples/mnist_classifier",
    "examples/quickstart_v2",
    "examples/obd2_diagnostic",
    "examples/cifar10_classifier",
    "examples/transformer_demo",
    "examples/transformer_compress",
    "examples/sentiment_demo",
    "scirust-macros",
    "scirust-autodiff",
    "scirust-simd-macros",
    "scirust-simd",
    "scirust-gpu",
    "scirust-cuda",
    "scirust-core",
    "scirust-runtime",
    "scirust-embedded",
    "scirust-learning",
    "scirust-symbolic",
    "scirust-symreg",
    "scirust-synthesis",
    "scirust-solvers",
    "scirust-reasoning",
    "scirust-bridge",
    "scirust-evo",
    "scirust-edge",
    "scirust-events-core",
    "scirust-events-models",
    "scirust-events-runtime",
    "scirust-events-examples",
    "scirust-neuro-symbolic",
    "scirust-arena",
    "scirust-fusion",
    "scirust-tn",
    "scirust-tensor-core",
    "scirust-tensor-einsum",
    "scirust-tensor-contraction",
    "scirust-tensor-compile",
    "scirust-tensor-runtime",
    "scirust-tensor-examples",
    "scirust-onnx",
    "scirust-nas",
    "scirust-som/crates/pcg",
    "scirust-som/crates/tokenizer",
    "scirust-som/crates/dataset",
    "scirust-som/crates/model",
    "scirust-som/crates/trainer",
    "scirust-som/crates/inference",
    "scirust-som/crates/symbolic",
    "scirust-som/crates/frontend",
    "scirust-som/crates/cli",
    "scirust-cli",
    "scirust-codetrans",
    "scirust-finmigrate",
    "scirust-transpiler",
    "scirust-som/crates/visualizer",
    "examples/industrial_monitor",
    "scirust-signal",
    "scirust-trader",
    "scirust-opcua",
    "scirust-mqtt",
    "scirust-pdm",
    "scirust-estimation",
    "scirust-nav",
    "scirust-water",
    "scirust-control",
    "scirust-bms",
    "scirust-grid",
    "scirust-shm",
    "scirust-biomed",
    "scirust-hvac",
    "scirust-spc",
    "scirust-robotics",
    "scirust-metrology",
    "scirust-mlops",
    "scirust-reliability",
    "scirust-func-safety",
    "scirust-integration",
    "scirust-industrial",
    "scirust-ids",
    "examples/ids_demo",
    "scirust-unsupervised",
    "scirust-multivariate",
    "scirust-sequential",
    "scirust-seasonal",
    "scirust-nlp-advanced",
    "scirust-vision",
    "scirust-audio",
    "scirust-graph",
    "scirust-algogen",
    "scirust-automl",
    "scirust-rl-algo",
    "scirust-scaffold",
    "scirust-sciagent",
    "scirust-rsi",
    "scirust-license",
    "scirust-retrieval",
    "scirust-mcp",
    "scirust-discovery",
    "scirust-sis",
    "scirust-maritime",
    "scirust-fab",
    "scirust-agtech",
    "scirust-fatigue",
    "scirust-machining",
    "scirust-tolerance",
    "scirust-sigma",
    "scirust-special",
    "scirust-fractional",
    "scirust-relativity",
    "scirust-nonlocal-relativity",
    "scirust-stats",
    "scirust-interp",
    "scirust-sparse",
    "scirust-stiff",
    "scirust-gp",
    "scirust-units",
    "scirust-frame",
    "scirust-forecast",
    "scirust-fluids",
    "scirust-thermo",
    "scirust-sim",
]
exclude = [
    "examples/simd_views_demo",
    "examples/benchmarks",
    # Fuzz harness: its own nightly-only workspace (libfuzzer-sys), built only
    # by the dedicated `fuzz` CI job. Never part of the main workspace build.
    "fuzz",
    # Requires `[workspace.dependencies] burn` and the heavy external `burn`
    # crate; kept out of the default workspace build.
    "scirust-burn-bridge",
]
resolver = "2"
