[package]
name = "scirust-algogen"
version = "0.1.0"
edition = "2021"
description = "Algorithm generation: sorting, searching, graph, dynamic programming, divide-and-conquer"
license = "PolyForm-Noncommercial-1.0.0"

[dependencies]
scirust-core = { path = "../scirust-core" }
scirust-evo = { path = "../scirust-evo" }
scirust-tensor-core = { path = "../scirust-tensor-core" }
scirust-tensor-einsum = { path = "../scirust-tensor-einsum" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
rayon = { version = "1", optional = true }

[features]
# Optional parallel population evaluation. Results are collected back into input
# order, so a run is bit-identical to the sequential path.
rayon = ["dep:rayon"]
