[package]
name = "scirust-audio"
version = "0.1.0"
edition = "2021"
description = "Audio pattern recognition: MFCC, chroma features, onset detection, pitch tracking"
license = "PolyForm-Noncommercial-1.0.0"

[dependencies]
scirust-core = { path = "../scirust-core" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
