[package]
name = "scirust-burn-bridge"
publish = false
version = "0.14.0"
edition = "2021"
rust-version = "1.85"
authors = ["Tarek Zekriti"]
license-file = "../LICENSE.md"
repository = "https://github.com/Memorithm/scirust"
description = "Inference-only adapter between Burn neural networks and SciRust non-gradient algorithms"
readme = "README.md"
keywords = ["burn", "rust-ml", "evolutionary", "inference", "scirust"]
categories = ["science"]

# This crate depends on the heavy external `burn` crate and is intentionally
# detached from the SciRust workspace (it is listed under `exclude` in the root
# Cargo.toml). The empty `[workspace]` table below makes it its own workspace
# root so it can build/test standalone without inheriting from the parent.
[workspace]

[dependencies]
burn = { version = "0.20.1", default-features = false }
thiserror = "2"

[dev-dependencies]
# burn-ndarray pour les tests d'intégration et benchmarks (CPU sans CUDA)
burn-ndarray = "0.20.1"
# burn complet activé pour les modules nn::* dans les tests
burn = { version = "0.20.1", features = ["std", "ndarray"] }

[[bench]]
name = "forward"
harness = false  # on utilise std::time::Instant, pas criterion (moins de deps en phase 0)

[[example]]
name = "eval_population"
path = "examples/eval_population.rs"
