[package]
name = "scirust-cayley-filter"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.89"
authors = ["SciRust Team"]
description = "Experimental Cayley-Dickson filtering operators with falsifiable signal-preservation and noise-rejection metrics"
license-file = "../LICENSE.md"

[features]
default = []

[dependencies]

[dev-dependencies]
