[package]
name = "scirust-core"
version = "0.1.0"
edition = "2024"

[dependencies]
scirust-autodiff = { path = "../scirust-autodiff" }
scirust-macros = { path = "../scirust-macros" }
scirust-simd = { path = "../scirust-simd" }
scirust-gpu-macros = { path = "../scirust-gpu-macros" }
rand = "0.9"
ndarray = "0.16"
blas = { version = "0.22", optional = true }
blas-src = { version = "0.10", optional = true }
rayon = { version = "1.8", optional = true }

[features]
default = []
portable-simd = ["scirust-simd/portable-simd"]
blas = ["dep:blas", "dep:blas-src"]
blas-openblas = ["blas", "blas-src/openblas"]
blas-mkl = ["blas", "blas-src/intel-mkl"]
