[package]
name = "scirust-core"
version = "0.1.0"
edition = "2024"
publish = false
rust-version = "1.85"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scirust-symbolic = { path = "../scirust-symbolic" }
thiserror = "2"
scirust-autodiff = { path = "../scirust-autodiff" }
scirust-macros = { path = "../scirust-macros" }
scirust-simd = { path = "../scirust-simd" }
scirust-gpu-macros = { path = "../scirust-gpu-macros" }

rand = "0.8"
rand_distr = "0.4"
ndarray = "0.16"
blas = { version = "0.22", optional = true }
blas-src = { version = "0.10", optional = true }
rayon = { version = "1.8", optional = true }
matrixmultiply = "0.3.10"
num-bigint = "0.4"
num-traits = "0.2"
half = "2.4"
nalgebra = "0.33"
libc = "0.2"

[dev-dependencies]
approx = "0.5"

[features]
default = ["rayon"]
gpu = []
portable-simd = ["scirust-simd/portable-simd"]
blas = ["dep:blas", "dep:blas-src"]
blas-openblas = ["blas", "blas-src/openblas"]
blas-mkl = ["blas", "blas-src/intel-mkl"]
