[package]
name = "scirust-discovery"
version = "0.1.0"
edition = "2021"
publish = false
description = "SciRust safe OT/IT asset discovery — consent-scoped, protocol-native, hash-chained audit log"

[dependencies]
scirust-sciagent = { path = "../scirust-sciagent" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
