[package]
name = "scirust-estimation"
version = "0.1.0"
edition = "2021"
publish = false
description = "SciRust state estimation — deterministic Kalman/EKF filters and certified set-membership (interval) estimation"

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
# Cross-oracle only (tests): the local Cholesky used by the RLS recondition
# paths is verified against scirust-solvers' independent implementation.
# Dev-dependency on purpose — it must not weigh down dependents of this crate.
scirust-solvers = { path = "../scirust-solvers" }
