[package]
name = "scirust-evo"
version = "0.1.0"
edition = "2021"
publish = false
description = "SciRust Evolutionary Algorithms — GA, CMA-ES, OpenES, NSGA-II"
license-file = "../LICENSE.md"
repository = "https://github.com/CHECKUPAUTO/scirust"

[dependencies]
rand = "0.8"
rand_distr = "0.4"
rayon = "1.10"
thiserror = "2"
tracing = "0.1"
