[package]
name = "scirust-finmigrate"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Audit-gated COBOL→Rust financial migration harness: sandbox, golden baselines, and exact decimal equivalence proofs for the INTACCR/AMORTSCH/PAYCALC/DAYCOUNT units."
license-file = "../LICENSE.md"
repository = "https://github.com/Memorithm/scirust"
publish = false

[dependencies]
# Decimal-exact fixed-point arithmetic. NO floating point is permitted in the
# money path (see audit_report.md Gap-1). rust_decimal reproduces COMP-3
# semantics and exposes the explicit rounding strategies COBOL requires.
rust_decimal = "1"
# Tamper-evidence: the finaudit tool recomputes each Golden Baseline's SHA-256
# and checks it against the committed digest. Pure-Rust, already in the lockfile.
sha2 = "0.10"

# Consolidated audit-report / baseline tamper-check tool (Phase 3 auditability).
[[bin]]
name = "finaudit"
path = "src/bin/finaudit.rs"

[dev-dependencies]
# Equivalence tests read the committed Golden Baseline CSVs.
