[package]
name = "scirust-fusion"
version = "0.1.0"
edition = "2021"
publish = false
description = "SciRust AST/MIR operator fusion engine for kernel compilation"
license = "MIT OR Apache-2.0"

[dependencies]
scirust-core = { path = "../scirust-core" }
scirust-simd = { path = "../scirust-simd" }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "fusion_bench"
harness = false
