[package]
name = "scirust-fusion"
version = "0.1.0"
edition = "2021"
publish = false
description = "SciRust AST/MIR operator fusion engine for kernel compilation"
license-file = "../LICENSE.md"

[dependencies]
scirust-core = { path = "../scirust-core" }
scirust-simd = { path = "../scirust-simd" }
sha2 = "0.10"

[features]
portable-simd = []

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "fusion_bench"
harness = false
