[package]
name = "scirust-graph"
version = "0.1.0"
edition = "2021"
description = "Graph pattern matching: subgraph isomorphism, motif discovery, community detection"
license = "PolyForm-Noncommercial-1.0.0"

[dependencies]
scirust-core = { path = "../scirust-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
