[package]
name = "scirust-grid"
version = "0.1.0"
edition = "2021"
publish = false
description = "SciRust power-grid analytics — frequency/RoCoF, synchrophasors, THD, islanding detection"

[dependencies]
scirust-signal = { path = "../scirust-signal" }
scirust-license = { path = "../scirust-license" }
serde = { version = "1", features = ["derive"] }
