[package]
name = "scirust-hypercrypto"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.89"
description = "EXPERIMENTAL research-only structural falsification harness for the SciRust-HyperCrypto v0.1 hypercomplex keyed-permutation candidate. NOT a cipher. NOT for production. NOT a security claim. Pure Rust, no unsafe, integer-only, deterministic."
license-file = "../LICENSE.md"
repository = "https://github.com/Memorithm/scirust"

[dependencies]
scirust-modalg = { path = "../scirust-modalg" }
# SHA-256 is used ONLY for deterministic research-output fingerprints and the
# spec's GraphId. It is NOT part of any keyed construction here. Already present
# in Cargo.lock (RustCrypto), so this adds no new download.
sha2 = "0.10"
# Optional bridge to the workspace-wide CANR §9 benchmark schema
# (`Json::to_bench_records`, analysis/report.rs). Off by default: this crate's
# own report.rs deliberately has no serde dependency ("field order is explicit
# and stable"), and scirust-bench-schema pulls in serde/serde_json — so the
# default build stays exactly as it was, and the bridge only compiles in when
# a consumer opts in.
scirust-bench-schema = { path = "../scirust-bench-schema", optional = true }

[features]
bench-schema = ["dep:scirust-bench-schema"]

[[bin]]
name = "hypercrypto-falsify"
path = "src/bin/hypercrypto-falsify.rs"
